src/app/styles/globals.scss
@use './variables' as *;
@use './breakpoints' as *;
@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap');

* {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
	font-family: 'Open Sans', sans-serif;
	list-style-type: none;
}

body {
	background-color: $mystic;
	overflow-x: hidden;
	@include breakpoint(sm) {
		background-color: $darkerMystic;
	}
	&::-webkit-scrollbar {
		width: 12px;
	}
	&::-webkit-scrollbar-track {
		box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
	}
	&::-webkit-scrollbar-thumb {
		background-color: $comet;
		outline: 1px solid $darkerMystic;
	}
}

.layout {
	width: 1174px;
	margin: 0 auto;
	display: flex;
	position: relative;
	top: $gamebarHeight;
	@include breakpoint(sm) {
		max-width: 100vw;
	}
	@include breakpoint(xs) {
		max-width: 100vw;
		top: unset;
	}
	.left-sidebar,
	.right-sidebar {
		width: 285px;
		min-width: 285px;
		max-width: 285px;
		padding: 0 10px;
		position: sticky;
		top: $gamebarHeight;
		height: calc(100vh - 10px - $gamebarHeight);
		z-index: 9999;
		transition: all 200ms ease-in-out;
		@include breakpoint(sm) {
			top: 0;
			display: none;
		}
		@include breakpoint(xs) {
			display: none;
		}
		.disclaimer {
			color: $charade;
			font-size: 11px;
			position: absolute;
			padding: 0 5px;
			bottom: 20px;
			display: flex;
			flex-direction: column;
			gap: 1rem;
			left: 10px;
			width: 98%;
			p {
				a {
					color: $charade;
				}
			}
		}
	}

	.right-sidebar {
		@include breakpoint(sm) {
			display: none;
		}
	}
}

